--- a/style.css
+++ b/style.css
@@ -1,49 +1,17 @@
-body {
-  background-color: rgb(203, 161, 115);
-  color: rgb(66, 83, 192);
-}
+/* Error: expected ":".
+ *    ,
+ * 81 |         $primary-color
+ *    |                       ^
+ *    '
+ *   style.scss 81:23  root stylesheet */
 
-h1 {
-  color: rgb(17, 48, 19);
-  font-size: 75px;
-  margin: 50px;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected ":".\a    \2577 \a 81 \2502          $primary-color\d\a    \2502                        ^\a    \2575 \a   style.scss 81:23  root stylesheet';
 }
-
-h2 {
-  color: rgb(50, 20, 20);
-  font-size: 50px;
-  margin: 25px;
-}
-
-h3 {
-  color: rgb(61, 26, 26);
-  font-size: 50px;
-  margin-top: 25px;
-}
-
-.logo {
-  text-transform: capitalize;
-}
-
-video {
-  size-adjust: 5px;
-}
-
-main img {
-  font-size: 5%;
-}
-
-img {
-  font-size: 30%;
-}
-
-.temas {
-  width: 200px;
-  height: 100px;
-  background-color: rgb(241, 230, 217);
-  border: 2px;
-  text-align: center;
-  line-height: 100px;
-}
-
-/*# sourceMappingURL=style.css.map */
